Release v1.3.0, add WhatsApp Edit Template API.
